[project]
name = "async-provisionig"
version = "0.1.0"
description = "Асинхронный запуск процесса активации оборудования"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "aiosqlite==0.21.0",
    "alembic==1.16.2",
    "fastapi==0.115.14",
    "greenlet==3.2.3",
    "pydantic-settings==2.10.1",
    "sqlalchemy==2.0.41",
    "uvicorn==0.34.3",
]

[dependency-groups]
dev = [
    "ruff>=0.12.1",
]
